fixed text align

--- a/src/style/DataBody.css
+++ b/src/style/DataBody.css
@@ -10,4 +10,5 @@ tr {
 }
 th {
     padding-bottom: 1.0em;
+    text-align: justify;
 }
